--- a/ansible/play_main.yml
+++ b/ansible/play_main.yml
@@ -262,8 +262,10 @@
       file:
         path: "/www/webapp/cache/tops"
         state: directory
-        recurse: yes
+        owner: www-data
+        group: www-data
         mode: "g+w"
+        recurse: yes
 
     - name: Allow members of the www-data group the write access
       file:
